fix ipad overflow bug. edited Cheatsheet description.

--- a/less/app.less
+++ b/less/app.less
@@ -25,6 +25,10 @@
 @import "iphone.less";
 @import "links.less";
 
+body {
+	overflow-x: hidden; //hack
+}
+
 #home {
 	h1, footer {
 		color: darken(@body-bg-gray, 5%) !important;
